[package]
edition = "2024"
name = "fenyx"
version = "0.1.0"

[[bin]]
name = "fenyx"
path = "./src/main.rs"

[dependencies]
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "macros",
  "async",
] }
cfg-if = "1.0.0"
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "esp32h2",
  "log-04",
  "unstable",
] }
log = "0.4.27"

bt-hci = { version = "0.2.1", features = [] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-20480",
] }
embassy-futures = "0.1.1"
embassy-time = { version = "0.4.0", features = ["log"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-hal-embassy = { version = "0.8.1", features = ["esp32h2", "log-04"] }
esp-println = { version = "0.14.0", features = ["esp32h2", "log-04"] }
esp-wifi = { version = "0.14.1", features = [
  "ble",
  "builtin-scheduler",
  "esp-alloc",
  "esp32h2",
  "log-04",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
trouble-host = { version = "0.1.0", features = ["gatt"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
